src/tests/snapshots/niri__tests__window_opening__check_target_size@omT-dhF500-wfsBN.snap
---
source: src/tests/window_opening.rs
description: "open maximized: true\ndefault window height: F500\nwant fullscreen: BN"
expression: snapshot
---
initial configure:
size: 1280 × 720, bounds: 1248 × 688, states: [Fullscreen]

post-map configures:
size: 1280 × 720, bounds: 1248 × 688, states: [Fullscreen, Activated]

unfullscreen configure:
size: 1248 × 500, bounds: 1248 × 688, states: [Activated]
